--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:gravity="center"
-    tools:context="android.com.mmassignment.activity.SplashScreenActivity">
+    tools:context="android.com.mmassignment.splash.SplashScreenActivity">
 
   <TextView
       android:gravity="center"
