--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="android.com.mmassignment.fragment.CategoriesFragment">
+    tools:context="android.com.mmassignment.home.categories.CategoriesFragment">
 
 <android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
