--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="android.buycott.com.mmassignment.HomeActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_toggleview"
+        android:icon="@drawable/ic_menu_view_grid"
+        android:orderInCategory="1"
+        android:title="@string/action_changeview"
+        app:showAsAction="always" />
 </menu>
